# pixpat

./: .gitignore  README.md  meson.build  meson.options  pyproject.toml  setup.py  uncrustify.cfg
.github/workflows/: ci.yml  wheels.yml
pixpat-native/codegen/: gen_pixpat.py
pixpat-native/cross/: aarch64-linux-gnu.txt
pixpat-native/inc/pixpat/: pixpat.h
pixpat-native/profiles/: no_hotpath.toml  pattern_only.toml  pixpat.toml  to_bgr888.toml
pixpat-native/src/: color.h  error.h  format_catalog.h  formats.h  io.h  layout.h  params.h  pattern.h  pattern_catalog.h  pipeline.h  pixpat.cpp  pixpat_convert.cpp  pixpat_internal.h  pixpat_pattern.cpp  threading.h
pixpat-native/src/formats/: bayer.h  grayscale.h  rgb.h  yuv_packed.h  yuv_planar.h  yuv_semiplanar.h
pixpat-native/src/io/: bayer.h  csi2.h  detail.h  gray.h  gray_packed.h  mono_rgb.h  packed.h  packed_yuv.h  planar.h  semiplanar.h
pixpat-native/tests/: meson.build  test_pixpat.cpp  test_pixpat_c.c
pixpat-python/pixpat/: __init__.py  _native.py
pixpat-python/pixpat/_lib/: .gitkeep
pixpat-python/scripts/: build_wheel.sh  perf_test.py
pixpat-python/tests/: test_basic.py  test_numpy.py  test_threading.py
scripts/: build_profiles.sh  format-all.sh
