[build-system]
requires = [
    "setuptools>=70.1",
    "wheel",
    "meson>=1.3",
    "ninja",
    "tomli; python_version < '3.11'",
]
build-backend = "setuptools.build_meta"

[project]
name = "pixpat"
# Keep version in sync with meson.build (single source of truth would be nice;
# revisit if it ever drifts in practice).
version = "1.0.0"
description = "Pixel format conversion and test pattern generation"
requires-python = ">=3.10"
authors = [{name = "Tomi Valkeinen", email = "tomi.valkeinen@ideasonboard.com"}]
# The pixpat module talks to libpixpat via ctypes and uses only the stdlib.
dependencies = []

[project.optional-dependencies]
test = ["pytest", "numpy"]
scripts = ["numpy", "pixutils @ git+https://github.com/tomba/pixutils"]
dev = ["pixpat[test,scripts]", "ruff"]

[tool.setuptools]
package-dir = {"" = "pixpat-python"}
packages = ["pixpat"]

[tool.ruff]
line-length = 100

[tool.ruff.lint.flake8-quotes]
inline-quotes = 'single'
multiline-quotes = 'single'

[tool.ruff.format]
quote-style = 'single'
